k8s/blog.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: blog
spec:
  gatewayClassName: internet
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-http-redirect
spec:
  parentRefs:
    - name: blog
      sectionName: http
  hostnames:
    - wtrhs.com
    - www.wtrhs.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: blog
spec:
  hostnames:
    - wtrhs.com
    - www.wtrhs.com
  parentRefs:
    - name: blog
      sectionName: https
  rules:
    - backendRefs:
        - name: blog
          kind: Service
          port: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: registry.home.wtrhs.com/wtrhs/blog
          imagePullPolicy: Always
          volumeMounts:
            - name: certs-vol
              mountPath: "/certs"
              readOnly: true
          ports:
            - containerPort: 8888
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              scheme: HTTPS
              port: 8888
          resources:
            limits:
              cpu: 500m
              memory: 256M
      volumes:
        - name: certs-vol
          secret:
            secretName: wtrhs-com-tls
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  ports:
    - name: blog
      port: 8888
      targetPort: 8888
